--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <meta name="force-rendering" content="webkit" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#424242" />
-    <meta name="description" content="南淮花酱|MyIndex">
+    <meta name="description" content="江聪|MyIndex">
     <meta name="keywords" content="Index">
-    <meta name="author" content="南淮花酱">
-    <title>南淮花酱|MyIndex</title>
+    <meta name="author" content="江聪">
+    <title>江聪|MyIndex</title>
     <!-- jQuery -->
     <script src="https://lf9-cdn-tos.bytecdntp.com/cdn/expire-1-y/jquery/3.5.1/jquery.min.js"></script>
     <!-- HarmonyOS Sans -->
@@ -162,7 +162,7 @@
                             <div class="main-img">
                                 <img id="logo-img" src="./img/icon/logo.png" alt="img">
                                 <div class="img-title">
-                                    <span class="img-title-big" id="logo-text-1">南淮花酱</span>
+                                    <span class="img-title-big" id="logo-text-1">江聪</span>
                                     <span class="img-text" id="logo-text-2">.io</span>
                                 </div>
                             </div>
@@ -177,22 +177,22 @@
                             </div>
                             <!--社交链接-->
                             <div class="social" id="social">
-                                <a href="https://github.com/hsBUPT" class="link" id="github" style="margin-left: 4px"
+                                <a href="https://jiangcong2001.github.io/hsBUPT.github.io/" class="link" id="github" style="margin-left: 4px"
                                     target="_blank">
                                     <i class="fa-brands fa-github"></i>
                                 </a>
-                                <a href="https://wpa.qq.com/msgrd?v=3&uin=2257757362&site=qq&menu=yes" class="link"
+                                <a href="https://wpa.qq.com/msgrd?v=3&uin=2199314738&site=qq&menu=yes" class="link"
                                     id="qq" target="_blank">
                                     <i class="fa-brands fa-qq"></i>
                                 </a>
-                                <a href="mailto:2257757362@qq.com" class="link" id="email">
+                                <a href="mailto:2199314738@qq.com" class="link" id="email">
                                     <i class="fa-solid fa-envelope"></i>
                                 </a>
-                                <a href="https://space.bilibili.com/1410673018" class="link" id="bilibili"
+                                <a href="https://space.bilibili.com/521909400" class="link" id="bilibili"
                                     target="_blank">
                                     <i class="fa-brands fa-bilibili"></i>
                                 </a>
-                                <a href="https://t.me/BUPT_hs" class="link" id="telegram" target="_blank">
+                                <a href="https://t.me/jc8772" class="link" id="telegram" target="_blank">
                                     <i class="fa-brands fa-telegram"></i>
                                 </a>
                                 <a id="link-text">通过这里联系我</a>
@@ -219,7 +219,7 @@
                                         <div class="hitokoto-all">
                                             <div class="hitokoto-text"><span id="hitokoto_text">一个不正经的Up</span>
                                             </div>
-                                            <div class="hitokoto-from">-「&nbsp;<span id="from_text">南淮花酱</span>&nbsp;」
+                                            <div class="hitokoto-from">-「&nbsp;<span id="from_text">江聪</span>&nbsp;」
                                             </div>
                                         </div>
                                     </div>
@@ -278,18 +278,18 @@
                                 <!--第一组-->
                                 <div class="row">
                                     <div class="col">
-                                        <a id="link-url-1" href="https://www.csdn.net/" target="_blank">
+                                        <a id="link-url-1" href="https://jiang.taosuzhuan.cn/" target="_blank">
                                             <div class="link-card cards">
                                                 <i id="link-icon-1" class="fa-solid fa-blog"></i>
-                                                <span class="link-name" id="link-name-1">CSDN</span>
+                                                <span class="link-name" id="link-name-1">影视</span>
                                             </div>
                                         </a>
                                     </div>
                                     <div class="col 2">
-                                        <a id="link-url-2" href="https://pan.baidu.com/" target="_blank">
+                                        <a id="link-url-2" href="https://jx.taosuzhuan.cn/login" target="_blank">
                                             <div class="link-card cards">
                                                 <i id="link-icon-2" class="fa-solid fa-cloud"></i>
-                                                <span class="link-name" id="link-name-2">NetPan</span>
+                                                <span class="link-name" id="link-name-2">科学上网</span>
                                             </div>
                                         </a>
                                     </div>
@@ -313,18 +313,18 @@
                                         </a>
                                     </div>
                                     <div class="col 2">
-                                        <a id="link-url-5" href="https://openai.com/" target="_blank">
+                                        <a id="link-url-5" href="https://jiangcong2001.github.io/hsBUPT.github.io/" target="_blank">
                                             <div class="link-card cards">
                                                 <i id="link-icon-5" class="fa-solid fa-book-bookmark"></i>
-                                                <span class="link-name" id="link-name-5">OpenAI</span>
+                                                <span class="link-name" id="link-name-5">开发中</span>
                                             </div>
                                         </a>
                                     </div>
                                     <div class="col">
-                                        <a id="link-url-6" href="https://github.com/arofish/Mirror-pi" target="_blank">
+                                        <a id="link-url-6" href="https://jiangcong2001.github.io/hsBUPT.github.io/" target="_blank">
                                             <div class="link-card cards">
                                                 <i id="link-icon-6" class="fa-solid fa-flask"></i>
-                                                <span class="link-name" id="link-name-6">Mirror-pi</span>
+                                                <span class="link-name" id="link-name-6">开发中</span>
                                             </div>
                                         </a>
                                     </div>
@@ -551,7 +551,7 @@
             <div class="power">Copyright&nbsp;©&nbsp;<span id="power-year">2022</span>
                 <script>
                     document.write(' - ' + (new Date()).getFullYear())
-                </script>&nbsp;<a href="http://www.hsbupt.love/" id="power-text">南淮花酱|Hs</a>&nbsp;&amp;&nbsp;
+                </script>&nbsp;<a href="http://www.hsbupt.love/" id="power-text">江聪|Hs</a>&nbsp;&amp;&nbsp;
                 <!-- 以下信息请不要修改哦 -->
                 Made&nbsp;⚙Modified from&nbsp;<a href="/" target="_blank">imsyy</a>
 				🔒<a href="https://beian.miit.gov.cn/">暂未备案</a>
