--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <div class="inner three"></div>
             </div>
             <div class="loading-word">
-                <p class="loading-title" id="loading-title">南淮花酱|Index</p>
+                <p class="loading-title" id="loading-title">江聪|Index</p>
                 <span id="loading-text">Loading......</span>
             </div>
         </div>
@@ -439,7 +439,7 @@
                         <!--左侧内容-->
                         <div class="box-left">
                             <div class="img-title">
-                                <span class="img-title-big" id="logo-title-other">南淮花酱</span>
+                                <span class="img-title-big" id="logo-title-other">江聪</span>
                                 <span class="img-text" id="logo-title-other-small">.io</span><br />
                                 <span class="img-text">&nbsp;v&nbsp;1.1</span>
                                 <a href="https://github.com/hsBUPT" target="_blank">
