--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                                         </a>
                                     </div>
                                     <div class="col 2">
-                                        <a id="link-url-2" href="https://jx.taosuzhuan.cn/login" target="_blank">
+                                        <a id="link-url-2" href="https://vpn.taosuzhuan.cn/login" target="_blank">
                                             <div class="link-card cards">
                                                 <i id="link-icon-2" class="fa-solid fa-cloud"></i>
                                                 <span class="link-name" id="link-name-2">科学上网</span>
@@ -305,10 +305,10 @@
                                 <!--第二组-->
                                 <div class="row" style="margin-top: 1.5rem;">
                                     <div class="col">
-                                        <a id="link-url-4" href="https://www.bing.com/" target="_blank">
+                                        <a id="link-url-4" href="https://jx.taosuzhuan.cn/" target="_blank">
                                             <div class="link-card cards">
                                                 <i id="link-icon-4" class="fa-solid fa-compass"></i>
-                                                <span class="link-name" id="link-name-4">Bing</span>
+                                                <span class="link-name" id="link-name-4">视频解析</span>
                                             </div>
                                         </a>
                                     </div>
